Add filter builder, resolve helpers, task service, and request hooks
Implement four new SDK features:

- FR-007: Filter builder for V2 API with type-safe operators, boolean
  logic (AND/OR/NOT), deterministic escaping, and raw string escape hatch
- FR-010: resolve() helpers for companies (by domain) and persons (by email)
- FR-011: TaskService with get() and wait() methods for polling long-running
  operations like merges, with exponential backoff and jitter
- DX-008: Request/response hooks for advanced integrations, with sanitized
  metadata (API key never exposed)

Includes 39 new tests covering all features with @pytest.mark.req tags.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,8 @@ ignore = [
     "PLR2004",  # magic values
     "PLW2901",  # loop variable overwritten
     "RUF022",   # __all__ sorting is a readability choice
+    "PLR0915",  # Too many statements - complex retry logic acceptable
+    "PLR0911",  # Too many return statements - complex value formatting acceptable
 ]
 
 [tool.ruff.lint.per-file-ignores]
