Add TR-013 OpenAPI schema validation and TR-015 version compatibility
TR-013: OpenAPI Schema Alignment (V2)
- Add tools/validate_openapi_models.py script to validate SDK models
  against Affinity's official V2 OpenAPI specification
- Script fetches schema from stable URL and compares model fields
- Reports missing, extra, and type-mismatched fields
- Supports offline mode for local schema files

TR-015: V2 Minor Version Compatibility (Key-Version Awareness)
- Add VersionCompatibilityError exception for version-related parse failures
- Add expected_v2_version config parameter to ClientConfig and clients
- Add wrap_validation_error() helper to provide actionable version guidance
- Export VersionCompatibilityError from top-level package

Tests:
- Add 9 new tests covering TR-013 and TR-015 requirements
- All 149 tests passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,9 @@ ignore = [
     "PLR0912",  # examples may be branchy for demonstration purposes
     "SIM102",   # examples may use nested ifs for clarity
 ]
+"tools/*.py" = [
+    "PLC0415",  # dev tools may use local imports for lazy SDK loading
+]
 
 [tool.ruff.lint.isort]
 known-first-party = ["affinity"]
