--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,13 @@ jobs:
 
       - name: Test
         run: |
-          pytest --cov=affinity --cov-report=term-missing
+          pytest --cov=affinity --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
 
       - name: Traceability mapping is up to date
         run: |
