--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,9 @@ dev = [
     "ruff>=0.5.0",
     "mypy>=1.10.0",
 ]
+dotenv = [
+    "python-dotenv>=1.0.0",
+]
 docs = [
     "mkdocs>=1.5.0",
     "mkdocs-material>=9.0.0",
