--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,6 +68,9 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           mike deploy --push dev
+          if ! mike list | awk '{print $1}' | grep -Fxq latest; then
+            mike set-default --push dev
+          fi
 
       - name: Deploy (release)
         if: startsWith(github.ref, 'refs/tags/v')
