Complete onboarding ladder and add guide navigation

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,6 +37,15 @@ jobs:
         run: |
           mkdocs build -s
 
+      - name: Check internal links
+        uses: lycheeverse/lychee-action@v2
+        with:
+          args: >-
+            --no-progress
+            --exclude '^https?://'
+            --exclude '^mailto:'
+            site/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
