Add CODEOWNERS, fix company fields cache key, add performance guide

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
   - Guides:
       - Authentication: guides/authentication.md
       - Configuration: guides/configuration.md
+      - Performance tuning: guides/performance.md
       - API versions & routing: guides/api-versions-and-routing.md
       - Pagination: guides/pagination.md
       - Errors & retries: guides/errors-and-retries.md
