Add optional Affinity CLI
Adds click/rich-click CLI as an optional extra, with docs, tests, and improved error output.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,10 @@ nav:
   - Examples: examples.md
   - Glossary: glossary.md
   - Changelog: changelog.md
+  - CLI:
+      - Overview: cli/index.md
+      - Commands: cli/commands.md
+      - Scripting: cli/scripting.md
   - Guides:
       - Authentication: guides/authentication.md
       - Configuration: guides/configuration.md
