chore: include CLI deps in dev and fix mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,11 @@ dev = [
     "respx>=0.21.0",  # httpx mocking
     "ruff>=0.5.0",
     "mypy>=1.10.0",
+    # CLI deps are included in dev to keep type-checking and tests consistent.
+    "click>=8.1",
+    "rich>=13",
+    "rich-click>=1.8",
+    "platformdirs>=4",
 ]
 dotenv = [
     "python-dotenv>=1.0.0",
