--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ classifiers = [
     "Topic :: Office/Business :: Financial :: Investment",
 ]
 dependencies = [
-    "httpx>=0.25.0",
-    "pydantic>=2.8.0",
+    "httpx>=0.25.0,<1.0.0",
+    "pydantic>=2.8.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
@@ -51,7 +51,7 @@ dev = [
     "mypy>=1.10.0",
     # CLI deps are included in dev to keep type-checking and tests consistent.
     "click>=8.1",
-    "rich>=13",
+    "rich>=13,<14",
     "rich-click>=1.8",
     "platformdirs>=4",
     # mypy targets python_version=3.10, so TOML parsing must be importable during type-checking.
@@ -62,7 +62,7 @@ dotenv = [
 ]
 cli = [
     "click>=8.1",
-    "rich>=13",
+    "rich>=13,<14",
     "rich-click>=1.8",
     "platformdirs>=4",
     "tomli>=2; python_version<'3.11'",
