feat: add Claude Code plugin for SDK/CLI knowledge
- Add .claude-plugin/ with skills and commands for Claude Code users
- Plugin teaches correct SDK patterns (typed IDs, context managers, filters)
- Includes /affinity-help command for quick reference
- Add documentation in guides/claude-code-plugin.md
- Reference plugin in README and getting-started docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
       - Scripting: cli/scripting.md
       - JSON Output Reference: cli-reference.md
   - Guides:
+      - Claude Code plugin: guides/claude-code-plugin.md
       - Authentication: guides/authentication.md
       - Configuration: guides/configuration.md
       - Performance tuning: guides/performance.md
