fix(plugin): improve auto-discovery, add --json guidance, sync version
- Use explicit trigger phrases in skill description for auto-discovery
- Add critical pattern: always use --json for structured output
- Update plugin version to 0.3.0 (match SDK)
- Add pre-commit hook to sync plugin version with pyproject.toml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,3 +47,9 @@ repos:
         language: system
         types: [python]
         files: ^affinity/cli/commands/.*\.py$
+      - id: sync-plugin-version
+        name: Sync plugin version with SDK
+        entry: python tools/sync_plugin_version.py
+        language: system
+        files: ^(pyproject\.toml|\.claude-plugin/plugin\.json)$
+        pass_filenames: false
