feat(mcp): add MCPB bundle support for one-click installation
MCP Server v1.0.2 adds MCPB (MCP Bundle) distribution format for
one-click installation in Claude Desktop and other MCPB-compatible clients.

MCPB changes:
- Add mcpb.conf with bundle metadata (name, version, author, repository)
- Add icon.svg for display in MCP clients
- Upgrade mcp-bash-framework from 0.8.4 to 0.9.0
- Add `make mcpb` and `make mcpb-validate` targets
- Add dist/ to .gitignore for MCPB build output

CI/CD integration:
- plugin-build.yml: validate, build, and test MCPB bundles
- plugin-release.yml: include MCPB bundle in GitHub releases

Documentation improvements:
- Add AI Integrations landing page (docs/public/ai-integrations/)
- Add MCPB installation instructions to MCP docs
- Add "skills" terminology to Claude Code plugins guide
- Restructure mkdocs.yml navigation with AI Integrations section

Versioning updates:
- Add mcpb.conf to version file locations in VERSIONING.md
- Add mcpb.conf to MCP release checklist in PR template

The MCPB format complements (not replaces) the existing Claude Code
plugin ZIP distribution - they target different clients.

--- a/.github/workflows/plugin-release.yml
+++ b/.github/workflows/plugin-release.yml
@@ -20,6 +20,18 @@ jobs:
         with:
           ref: ${{ github.event.inputs.tag || github.ref }}
 
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
+      - name: Install mcp-bash framework
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/yaniv-golan/mcp-bash-framework/main/install.sh | \
+            bash -s -- --version v0.9.0 --yes
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Verify mcp-bash installation
+        run: mcp-bash --version
+
       - name: Verify plugin bundle exists
         run: |
           test -f mcp/.claude-plugin/xaffinity-mcp-plugin.zip || {
@@ -28,10 +40,55 @@ jobs:
           }
           echo "Plugin version: $(cat mcp/.claude-plugin/VERSION)"
 
+      - name: Validate MCPB configuration
+        run: |
+          cd mcp
+          mcp-bash bundle --validate
+
+      - name: Build MCPB bundle
+        run: |
+          cd mcp
+          mcp-bash bundle --output dist --verbose
+          ls -la dist/*.mcpb
+
+      - name: Validate MCPB bundle structure
+        run: |
+          cd mcp
+          MCPB_FILE=$(ls dist/*.mcpb | head -1)
+          unzip -t "$MCPB_FILE"
+          unzip -p "$MCPB_FILE" manifest.json | jq .
+          echo "MCPB bundle validated"
+
+      - name: Test MCPB bundle health check
+        run: |
+          cd mcp
+          MCPB_FILE=$(ls dist/*.mcpb | head -1)
+          EXTRACT_DIR=$(mktemp -d)
+          unzip -q "$MCPB_FILE" -d "$EXTRACT_DIR"
+          "$EXTRACT_DIR/server/run-server.sh" --health || echo "Health check not available (expected if CLI not configured)"
+          rm -rf "$EXTRACT_DIR"
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event.inputs.tag || github.ref_name }}
-          files: mcp/.claude-plugin/xaffinity-mcp-plugin.zip
+          files: |
+            mcp/.claude-plugin/xaffinity-mcp-plugin.zip
+            mcp/dist/*.mcpb
           generate_release_notes: true
           name: MCP Plugin ${{ github.event.inputs.tag || github.ref_name }}
+          body: |
+            ## Installation
+
+            ### One-click install (Claude Desktop)
+            Download `xaffinity-mcp-*.mcpb` and double-click or drag to Claude Desktop.
+
+            ### Claude Code
+            ```bash
+            /plugin marketplace add yaniv-golan/affinity-sdk
+            /plugin install mcp@xaffinity
+            ```
+
+            ### Manual configuration
+            Download `xaffinity-mcp-plugin.zip` and configure your MCP client manually.
+            See [documentation](https://yaniv-golan.github.io/affinity-sdk/latest/mcp/) for details.
