--- a/mcp/Makefile
+++ b/mcp/Makefile
@@ -1,13 +1,18 @@
-# Makefile for xaffinity MCP plugin
+# Makefile for xaffinity MCP server distribution
 #
-# This builds the Claude Code plugin by creating a ZIP archive
-# of the MCP server files for distribution.
+# Build targets:
+#   mcpb    - MCPB bundle for one-click installation (Claude Desktop, etc.)
+#   plugin  - Claude Code plugin ZIP (for marketplace distribution)
+#
+# The MCPB bundle is the preferred distribution format for MCP clients.
+# The plugin ZIP is retained for Claude Code marketplace compatibility.
 
 PLUGIN_DIR := .claude-plugin
 ZIP_FILE := $(PLUGIN_DIR)/xaffinity-mcp-plugin.zip
 VERSION_FILE := VERSION
+MCPB_OUTPUT_DIR := dist
 
-# MCP server files to include in ZIP
+# MCP server files to include in plugin ZIP
 MCP_FILES := \
 	xaffinity-mcp.sh \
 	xaffinity-mcp-env.sh \
@@ -15,7 +20,7 @@ MCP_FILES := \
 	FRAMEWORK_VERSION \
 	COMPATIBILITY
 
-# MCP server directories to include in ZIP
+# MCP server directories to include in plugin ZIP
 MCP_DIRS := \
 	completions \
 	lib \
@@ -26,10 +31,27 @@ MCP_DIRS := \
 	server.d \
 	tools
 
-.PHONY: plugin clean verify test-plugin help
+.PHONY: mcpb mcpb-validate plugin clean verify test-plugin help all
 
-# Default target: build the plugin ZIP
-plugin: clean
+# Default target: build both MCPB bundle and plugin ZIP
+all: mcpb plugin
+
+# Build MCPB bundle using mcp-bash framework (requires mcp-bash 0.9.0+)
+mcpb:
+	@echo "Building MCPB bundle..."
+	@mkdir -p "$(MCPB_OUTPUT_DIR)"
+	@mcp-bash bundle --output "$(MCPB_OUTPUT_DIR)" --verbose
+	@echo ""
+	@echo "MCPB bundle created in $(MCPB_OUTPUT_DIR)/"
+	@ls -la "$(MCPB_OUTPUT_DIR)"/*.mcpb 2>/dev/null || true
+
+# Validate MCPB bundle without creating
+mcpb-validate:
+	@echo "Validating MCPB bundle configuration..."
+	@mcp-bash bundle --validate
+
+# Build Claude Code plugin ZIP (legacy distribution)
+plugin: clean-plugin
 	@echo "Building plugin ZIP..."
 	@rm -f "$(ZIP_FILE)"
 	@zip -q "$(ZIP_FILE)" $(MCP_FILES)
@@ -44,16 +66,7 @@ plugin: clean
 	@echo "Version: $$(cat $(VERSION_FILE))"
 	@echo "Size: $$(du -h "$(ZIP_FILE)" | cut -f1)"
 
-# Verify the ZIP contents
-# Expected ZIP structure (flat, no subdirectory wrapper):
-#   xaffinity-mcp.sh
-#   xaffinity-mcp-env.sh
-#   VERSION
-#   FRAMEWORK_VERSION
-#   COMPATIBILITY
-#   tools/
-#   prompts/
-#   ...
+# Verify the plugin ZIP contents
 verify:
 	@echo "Verifying plugin ZIP..."
 	@test -f "$(ZIP_FILE)" || (echo "Error: ZIP not found" && exit 1)
@@ -74,17 +87,34 @@ test-plugin: plugin
 		(echo "FAIL: VERSION not extracted" && exit 1)
 	@echo "PASS: Plugin extraction test"
 
-# Clean build artifacts
-clean:
-	@echo "Cleaning..."
+# Clean all build artifacts
+clean: clean-plugin clean-mcpb
+
+# Clean plugin artifacts only
+clean-plugin:
+	@echo "Cleaning plugin artifacts..."
 	@rm -f "$(ZIP_FILE)"
 	@rm -f "$(PLUGIN_DIR)/VERSION"
 	@rm -rf "$(PLUGIN_DIR)/.mcp-extracted"
 
+# Clean MCPB artifacts only
+clean-mcpb:
+	@echo "Cleaning MCPB artifacts..."
+	@rm -rf "$(MCPB_OUTPUT_DIR)"
+
 help:
 	@echo "Available targets:"
-	@echo "  plugin      - Build the plugin ZIP archive"
-	@echo "  verify      - Verify ZIP contents"
-	@echo "  test-plugin - Build and test extraction"
-	@echo "  clean       - Remove build artifacts"
-	@echo "  help        - Show this help message"
+	@echo ""
+	@echo "  MCPB (preferred for MCP clients):"
+	@echo "    mcpb          - Build MCPB bundle (requires mcp-bash 0.9.0+)"
+	@echo "    mcpb-validate - Validate MCPB configuration"
+	@echo ""
+	@echo "  Claude Code Plugin:"
+	@echo "    plugin        - Build plugin ZIP archive"
+	@echo "    verify        - Verify ZIP contents"
+	@echo "    test-plugin   - Build and test extraction"
+	@echo ""
+	@echo "  General:"
+	@echo "    all           - Build both MCPB and plugin"
+	@echo "    clean         - Remove all build artifacts"
+	@echo "    help          - Show this help message"
