--- a/.github/workflows/plugin-build.yml
+++ b/.github/workflows/plugin-build.yml
@@ -7,6 +7,7 @@ on:
       - 'mcp/**'
       - '!mcp/.claude-plugin/xaffinity-mcp-plugin.zip'
       - '!mcp/.claude-plugin/VERSION'
+      - '!mcp/dist/**'
   workflow_dispatch:
 
 permissions:
@@ -19,6 +20,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
+      - name: Install mcp-bash framework
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/yaniv-golan/mcp-bash-framework/main/install.sh | \
+            bash -s -- --version v0.9.0 --yes
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Verify mcp-bash installation
+        run: |
+          mcp-bash --version
+          echo "mcp-bash installed successfully"
 
       - name: Build MCP plugin ZIP
         run: make -C mcp plugin
@@ -38,14 +53,45 @@ jobs:
           mkdir -p .mcp-extracted
           unzip -q xaffinity-mcp-plugin.zip -d .mcp-extracted
           test -x .mcp-extracted/xaffinity-mcp.sh
-          # Verify version file was extracted
           test -f .mcp-extracted/VERSION
           rm -rf .mcp-extracted
           echo "Extraction test passed"
 
+      - name: Validate MCPB configuration
+        run: |
+          cd mcp
+          mcp-bash bundle --validate
+          echo "MCPB configuration validated"
+
+      - name: Build MCPB bundle
+        run: |
+          cd mcp
+          mcp-bash bundle --output dist --verbose
+          ls -la dist/*.mcpb
+          echo "MCPB bundle created"
+
+      - name: Validate MCPB bundle structure
+        run: |
+          cd mcp
+          MCPB_FILE=$(ls dist/*.mcpb | head -1)
+          unzip -t "$MCPB_FILE"
+          unzip -p "$MCPB_FILE" manifest.json | jq .
+          echo "MCPB bundle structure validated"
+
+      - name: Test MCPB bundle health check
+        run: |
+          cd mcp
+          MCPB_FILE=$(ls dist/*.mcpb | head -1)
+          EXTRACT_DIR=$(mktemp -d)
+          unzip -q "$MCPB_FILE" -d "$EXTRACT_DIR"
+          # Test the wrapper script health check
+          "$EXTRACT_DIR/server/run-server.sh" --health || echo "Health check not available (expected if CLI not configured)"
+          rm -rf "$EXTRACT_DIR"
+          echo "MCPB bundle test completed"
+
       - name: Commit plugin bundle
         run: |
-          # Skip if last commit was from this action (belt-and-suspenders with path exclusions)
+          # Skip if last commit was from this action
           if git log -1 --pretty=%B | grep -q "\[skip ci\]"; then
             echo "Skipping - last commit was from CI"
             exit 0
@@ -60,3 +106,10 @@ jobs:
             git commit -m "build: update MCP plugin bundle [skip ci]"
             git push
           fi
+
+      - name: Upload MCPB bundle artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: mcpb-bundle
+          path: mcp/dist/*.mcpb
+          retention-days: 30
