--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - Errors & retries: guides/errors-and-retries.md
       - Rate limits: guides/rate-limits.md
       - Filtering: guides/filtering.md
+      - Query command: guides/query-command.md
       - Datetime handling: guides/datetime-handling.md
       - CSV Export (CLI): guides/csv-export.md
       - Field types & values: guides/field-types-and-values.md
@@ -70,6 +71,7 @@ nav:
       - Exceptions: reference/exceptions.md
       - Types: reference/types.md
       - Filters: reference/filters.md
+      - Query Language: reference/query-language.md
       - Models: reference/models.md
       - Services:
           - Companies: reference/services/companies.md
